<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/food2"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/log_meal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_log_meal_hint"
        android:inputType="textMultiLine"
        android:maxHeight="90dp"
        android:textColor="@color/black" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <EditText
        android:id="@+id/log_calories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_log_calories_hint"
        android:inputType="number"
        android:maxLength="9"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="186dp"
            android:layout_height="46dp"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_cal_count"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:typeface="serif" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@color/black"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/cal_per_serv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cal_per_serv"
            android:inputType="number"
            android:maxLength="5"
            android:textColor="@color/black" />
    </LinearLayout>

    <EditText
        android:id="@+id/per_serving"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/per_serving"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/serv_amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/serv_am"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textColor="@color/black" />

</LinearLayout>