<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="4dp" >

    <adebambo.cs.ualberta.ca.calorie_log.UIElements.TitleBar
        android:id="@+id/titleBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </adebambo.cs.ualberta.ca.calorie_log.UIElements.TitleBar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/daily_cal"
            android:textColor="@color/calorie_total_text"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/total_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:minWidth="40dp"
            android:textColor="@color/calorie_total_text"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/current_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/no_logs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:paddingTop="120dp"
        android:text="@string/no_logs"
        android:textSize="18dp" />

    <ListView
        android:id="@+id/log_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/log_list_divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/log_list_selector" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_log_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.46"
            android:text="@string/add_log"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/view_comp_log"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="0.17"
            android:text="@string/view_comp_log"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>