<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="4dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
                android:background="@color/black"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/total_calories"
            android:textColor="@color/calorie_total_text"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/total_calories_consumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:minWidth="40dp"
            android:textColor="@color/calorie_total_text"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/days_logged"
            android:textColor="@color/calorie_total_text"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/days_logged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:minWidth="40dp"
            android:textColor="@color/calorie_total_text"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/average_calories"
            android:textColor="@color/calorie_total_text"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/average_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:minWidth="40dp"
            android:textColor="@color/calorie_total_text"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/no_logs_ever"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:paddingTop="120dp"
        android:text="No logs have been saved yet"
        android:textSize="18dp" />

    <ListView
        android:id="@+id/log_list2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/log_list_divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/log_list_selector" >
    </ListView>

</LinearLayout>